--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,14 @@
 - src: http://github.com/websoft9dev/role_nginx
   version: master
 
-# 根据需求添加相对应的role
+- src: http://github.com/websoft9dev/role_docker
+  version: master
+
+- src: http://github.com/websoft9dev/role_mysql
+  version: master
+
+- src: http://github.com/websoft9dev/role_init
+  version: master
 
 - src: http://github.com/websoft9dev/role_preend
   version: master
