--- a/ghost.yml
+++ b/ghost.yml
@@ -15,6 +15,7 @@
     - {role: role_nginx, tags: "role_nginx"}  
     - {role: role_mysql, tags: "role_mysql"}  
     - {role: role_docker, tags: "role_docker"}  
-    - {role: role_init, tags: "role_init"}  
-    - {role: role_preend, tags: "preend"}
-    - {role: role_end, tags: "role_end"}
+    - {role: ghost, tags: "ghost"}  
+    #- {role: role_init, tags: "role_init"}  
+    #- {role: role_preend, tags: "preend"}
+    #- {role: role_end, tags: "role_end"}
