--- a/roles/ghost/handlers/main.yml
+++ b/roles/ghost/handlers/main.yml
@@ -1,3 +1,3 @@
-- name: check_rabbitmq_service
+- name: check_ghost_service
   debug:
-    var: check_rabbitmq_service.stdout
+    var: check_ghost_service.stdout
