--- a/roles/ghost/templates/config.production.json
+++ b/roles/ghost/templates/config.production.json
@@ -17,6 +17,7 @@
   },
   
   "mail": {
+      "from": "help@websoft9.com",
       "transport": "SMTP",
       "options": {
           "service": "Mailgun",
