--- a/roles/ghost/templates/config.production.json
+++ b/roles/ghost/templates/config.production.json
@@ -1,5 +1,5 @@
 {
-  "url": "http://localhost:2368",
+  "url": "http://www.yourdomain.com",
   "server": {
     "port": 2368,
     "host": "0.0.0.0"
