--- a/roles/ghost/defaults/main.yml
+++ b/roles/ghost/defaults/main.yml
@@ -1,5 +1,5 @@
 ghost_port: "2368"
-ghost_url: "http://www.yourdomain.com"
+ghost_url: "http://ghost.yourdomain.com"
 ghost_volume: "/data/wwwroot/ghost/content"
 
 
