--- a/roles/ghost/templates/config.production.json
+++ b/roles/ghost/templates/config.production.json
@@ -9,7 +9,7 @@
     "client": "{{ghost_db_client}}",
     "connection": {
       "host": "{{ghost_db_host}}",
-      "port": {{ghost_db_port}},
+      "port": "{{ghost_db_port}}",
       "user": "{{ghost_db_user}}",
       "password": "{{ghost_db_password}}",
       "database": "{{ghost_db_database}}"
