--- a/roles/ghost/tasks/main.yml
+++ b/roles/ghost/tasks/main.yml
@@ -36,6 +36,7 @@
     chown -R ghost.ghost /data/wwwroot/ghost
     find /data/wwwroot/ghost -type d -exec chmod 750 {} \;
     find /data/wwwroot/ghost -not -type d -exec chmod 640 {} \;
+    chmod 0644 /data/wwwroot/ghost/config.production.json
 
 #4 Verify
 - name: Check Ghost Version
