--- a/vars/main.yml
+++ b/vars/main.yml
@@ -40,5 +40,5 @@ init_docker:
     service_after: "docker.service"
     compose_path: "/data/docker-compose.yml"
     compose_commands:
-      - 'sed -i "s/DB_ROOT_PASSWD=.*/DB_ROOT_PASSWD=$new_password/g" /data/ghost/config.production.json'
+      - 'sed -i "s/password=.*/password=$new_password/g" /data/ghost/config.production.json'
       - sudo docker restart ghost
