--- a/vars/main.yml
+++ b/vars/main.yml
@@ -38,6 +38,6 @@ init_db:
 init_docker:
   ghost:
     service_after: "docker.service"
-    compose_commands:
+    commands:
       - sudo sed -i  's/\("password":."\).*/\1'"$new_password"'",/g'  /data/wwwroot/ghost/config.production.json
       - sudo docker restart ghost
