--- a/roles/ghost/tasks/main.yml
+++ b/roles/ghost/tasks/main.yml
@@ -42,5 +42,5 @@
 #4 Verify
 - name: Check Ghost Version
   shell: |
-    sudo echo -e "node_version: `docker exec -it ghost /bin/bash -c 'node -v'`\n" |sudo tee -a /data/logs/install_version.txt
-    sudo echo -e "ghost_version: `docker exec -it ghost /bin/bash -c 'ls versions'`\n" |sudo tee -a /data/logs/install_version.txt
+    sudo echo -e "node_version: `docker exec -it ghost /bin/bash -c 'node -v'`" |sudo tee -a /data/logs/install_version.txt
+    sudo echo -e "ghost_version: `docker exec -it ghost /bin/bash -c 'ls versions'`" |sudo tee -a /data/logs/install_version.txt
